--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,10 @@
 <resources>
     <string name="app_name">BeerRate</string>
-    <string name="title_home">Home</string>
+    <string name="title_preferences">Preferences</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="save">Save</string>
+    <string name="types_of_beer">Types of beer</string>
+    <string name="edit">Edit</string>
+    <string name="styles_of_beer">Styles of beer</string>
 </resources>
