Just WiP commit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="types_of_beer">Types of beer</string>
     <string name="edit">Edit</string>
     <string name="styles_of_beer">Styles of beer</string>
+    <string name="search">Search</string>
 </resources>
