--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,10 @@
     <string name="title_notifications">Notifications</string>
     <string name="types_of_beer">Types of beer</string>
     <string name="edit">Edit</string>
+    <string name="toggle">Toggle</string>
     <string name="styles_of_beer">Styles of beer</string>
     <string name="save">Save</string>
     <string name="pref">pref</string>
     <string name="skip">skip</string>
+    <string name="beer_type">%1$s%2$s</string>
 </resources>
