--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="title_preferences">Preferences</string>
     <string name="title_explore">Explore</string>
     <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_search">Search</string>
     <string name="types_of_beer">Types of beer</string>
     <string name="edit">Edit</string>
     <string name="styles_of_beer">Styles of beer</string>
