--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,9 @@
     <string name="title_explore">Explore</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="title_my_beers">My Beers</string>
     <string name="types_of_beer">Types of beer</string>
+    <string name="action_search">Search</string>
     <string name="edit">Edit</string>
     <string name="toggle">Toggle</string>
     <string name="styles_of_beer">Styles of beer</string>
