--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="pref">pref</string>
     <string name="skip">skip</string>
     <string name="beer_type">%1$s%2$s</string>
+    <string name="user_rating">User rating</string>
 </resources>
