--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,6 @@
     <string name="app_name">BeerRate</string>
     <string name="title_preferences">Preferences</string>
     <string name="title_explore">Explore</string>
-    <string name="title_dashboard">Dashboard</string>
     <string name="title_search">Search</string>
     <string name="title_notifications">Notifications</string>
     <string name="title_my_beers">My Beers</string>
@@ -18,4 +17,5 @@
     <string name="beer_type">%1$s%2$s</string>
     <string name="user_rating">User rating</string>
     <string name="beer_style">%1$s%2$s</string>
+    <string name="search_title">Search for beers</string>
 </resources>
